                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 10-09-2004 fixed: State of the Album/song info on Visualisation wasn't saved.
  - 10-09-2004 fixed: Screensaver would not stop when mouse was moved/clicked
  - 09-09-2004 changed: Video subtitles cleanup + fixed sizing of subs.
  - 09-09-2004 added: move items up and down in playlists (remote: 3=up, 9=down, controller: not mapped)
  - 09-09-2004 changed: TTF font management optimization (skin with TTF consumes less memory than with XPR!)
  - 08-09-2004 changed: Video OSD now autoscales.  Should eliminate the need to calibrate it's position.
  - 08-09-2004 added: support for writing to samba shares
  - 07-09-2004 fixed: progress bar for video OSD now working again (SF Bug #1011943)
  - 07-09-2004 fixed: Fast trigger scrolling now halts at end of short lists/thumbs
  - 07-09-2004 added: SF patch 1020481: Allow XML configuration of displayed RSS tags (thanks Levsky)
  - 07-09-2004 fixed: Another blackscreen bug thanks to pike + yuvalt
  - 07-09-2004 updated: Polish language file (thanks NaPek)
  - 07-09-2004 updated: Portuguese language file (thanks wellingtontu)
  - 07-09-2004 updated: Italian language file (thanks kotix)
  - 07-09-2004 fixed: python dll loading ('import unicodedata' should work again)
  - 07-09-2004 fixed: xbmc oculd crash when restarting the webserver
  - 07-09-2004 added: password can now be set for the webserver
  - 07-09-2004 fixed: <aligny> now defaults to top instead of center (should make textoffsetY work unless overridden by aligny)
  - 07-09-2004 added: SF patch 1019867: Fix Matrix Screensaver to work in 1080i (thanks kraqh3d)