@@ -1930,7 +1930,7 @@
 	</string>
 	<string>
 		<id>723</id>
-		<value>Save &amp; Reset XBox</value>
+		<value>Save &amp; Restart</value>
 	</string>
 	<string>
 		<id>724</id>
